include/chemharp.h

    typedef harp::Trajectory CHRP_TRAJECTORY;
    typedef harp::Frame CHRP_FRAME;
    typedef harp::UnitCell CHRP_CELL;
    //! Opaque type handling trajectories files
    typedef struct CHRP_TRAJECTORY CHRP_TRAJECTORY;
    //! Opaque type handling frames, *i.e* data from a step
    typedef struct CHRP_FRAME CHRP_FRAME;
    //! Opaque type handling an unit cell
    typedef struct CHRP_CELL CHRP_CELL;
/*!
* @brief Get the error message corresponding to an error code.
* @param status The error code
* @return A null-terminated string encoding the textual representation of the status.
*/
CHRP_EXPORT const char* chrp_strerror(int status);
/*!
* @brief Get the last error message.
* @return A null-terminated string encoding the textual representation of the last error.
*/
CHRP_EXPORT const char* chrp_last_error();
//! Available logging level
typedef enum CHRP_LOG_LEVEL {
    //! Do not log anything
    CHRP_LOG_NONE = 0,
    //! Only log on errors
    CHRP_LOG_ERROR = 1,
    //! Log warnings and erors
    CHRP_LOG_WARNING = 2,
    //! Log infos, warnings and errors
    CHRP_LOG_INFO = 3,
    //! Log everything
    CHRP_LOG_DEBUG = 4
} chrp_log_level_t ;
/*!
* @brief Get the current logging level
* @param level The logging level
* @return The status code
*/
CHRP_EXPORT int chrp_loglevel(chrp_log_level_t* level);
/*!
* @brief Redirect the logs to \c file, overwriting the file if it exists
* @param file The filename for the new log file.
* @return The status code
*/
CHRP_EXPORT int chrp_logfile(const char* file);
/*!
* @brief Redirect the logs to the standard error output. This is enabled by default.
* @return The status code
*/
CHRP_EXPORT int chrp_log_stderr();
/*!
* @brief Read the next step of the trajectory into a frame
* @param file A pointer to the trajectory
* @param frame A frame to fill with the data
* @return The status code.
*/
CHRP_EXPORT int chrp_trajectory_read(CHRP_TRAJECTORY *file, CHRP_FRAME *frame);
/*!
* @brief Write a frame to the trajectory.
* @param file The trajectory to write
* @param frame the frame which will be writen to the file
* @return The status code.
*/
CHRP_EXPORT int chrp_trajectory_write(CHRP_TRAJECTORY *file, const CHRP_FRAME *frame);
/*!
* @brief Get the number of steps (the number of frames) in a trajectory.
* @param file A pointer to the trajectory
* @param nsteps This will contain the number of steps
* @return The status code.
*/
CHRP_EXPORT int chrp_trajectory_nsteps(CHRP_TRAJECTORY *file, size_t *nsteps);
/*!
* @brief Close a trajectory file, flush any buffer content to the hard drive, and
*        free the associated memory
* @param file A pointer to the file
* @return The status code
*/
CHRP_EXPORT int chrp_trajectory_close(CHRP_TRAJECTORY *file);
/******************************************************************************/
/*!
* @brief Create an empty frame with initial capacity of \c natoms. It will be
*        resized by the library as needed.
* @param natoms the size of the wanted frame
* @return A pointer to the frame
*/
CHRP_EXPORT CHRP_FRAME* chrp_frame(size_t natoms);
/*!
* @brief Get the positions from a frame
* @param frame The frame
* @param data A Nx3 float array to be filled with the data
* @param size The array size (N).
* @return The status code
*/
CHRP_EXPORT int chrp_frame_positions(const CHRP_FRAME* frame, float (*data)[3], size_t size);
/*!
* @brief Get the velocities from a frame, if they exists
* @param frame The frame
* @param data A Nx3 float array to be filled with the data
* @param size The array size (N).
* @return The status code
*/
CHRP_EXPORT int chrp_frame_velocities(const CHRP_FRAME* frame, float (*data)[3], size_t size);
/*!
* @brief Check if a frame has velocity information.
* @param frame The frame
* @param has_vel true if the frame has velocities, false otherwise.
* @return The status code
*/
CHRP_EXPORT int chrp_frame_has_velocities(const CHRP_FRAME* frame, bool *has_vel);
/*!
* @brief Get the Frame step, i.e. the frame number in the trajectory
* @param frame The frame
* @param step This will contains the step number
* @return The status code
*/
CHRP_EXPORT int chrp_frame_step(const CHRP_FRAME* frame, size_t* step);
/*!
* @brief Destroy a frame, and free the associated memory
* @param frame The frame to destroy
* @return The status code
*/
CHRP_EXPORT int chrp_frame_free(CHRP_FRAME* frame);
/******************************************************************************/
/*!
* @brief Create an ORTHOROMBIC UnitCell from the three lenghts
* @param a,b,c the three lenghts of the cell
* @return A pointer to the UnitCell
*/
CHRP_EXPORT CHRP_CELL* chrp_cell(double a, double b, double c);
/*!
* @brief Get the UnitCell from a frame
* @param frame the frame
* @return A pointer to the UnitCell
*/
CHRP_EXPORT CHRP_CELL* chrp_cell_from_frame(CHRP_FRAME* frame);
/*!
* @brief Get the cell lenghts.
* @param cell the unit cell to read
* @param a,b,c the three cell lenghts
* @return The status code
*/
CHRP_EXPORT int chrp_cell_lengths(const CHRP_CELL* cell, double* a, double* b, double* c);
/*!
* @brief Get the cell angles, in degrees.
* @param cell the cell to read
* @param alpha,beta,gamma the three cell angles
* @return The status code
*/
CHRP_EXPORT int chrp_cell_angles(const CHRP_CELL* cell, double* alpha, double* beta, double* gamma);
/*!
* @brief Get the unit cell matricial representation.
* @param cell the unit cell to use
* @param mat the matrix to fill. It should be a 3x3 matrix.
* @return The status code
*/
CHRP_EXPORT int chrp_cell_matrix(const CHRP_CELL* cell, double mat[3][3]);
//! Available cell types in Chemharp
typedef enum CHRP_CELL_TYPES {
    //! The three angles are 90°
    CHRP_CELL_ORTHOROMBIC = 0,
    //! The three angles may not be 90°
    CHRP_CELL_TRICLINIC = 1,
    //! Cell type when there is no periodic boundary conditions
    CHRP_CELL_INFINITE = 2,
} chrp_cell_type_t ;
/*!
* @brief Get the cell type
* @param cell the unit cell to read
* @param type the type of the cell
* @return The status code
*/
CHRP_EXPORT int chrp_cell_type(const CHRP_CELL* cell, chrp_cell_type_t* type);